添加变量与转换的详细说明，包含变量定义、作用域及常量的介绍；更新入门程序示例，增加代码高亮；新增数据类型相关笔记

--- a/1.Language Basic/1-Hello World/1.1-Note.md
+++ b/1.Language Basic/1-Hello World/1.1-Note.md
@@ -8,7 +8,7 @@ C++ 是一种高级语言，它是由 Bjarne Stroustrup 于 1979 年在贝尔实
 
 这些代码会输出`Hello, world!`
 
-```
+```cpp
 #include <iostream>
 using namespace std;
 int main()
