更新文档，增加代码高亮示例以提升可读性

--- a/1.Language Basic/4-Other Grammars/1.4-Note.md
+++ b/1.Language Basic/4-Other Grammars/1.4-Note.md
@@ -6,7 +6,7 @@
 
 在C++中，分号是语句结束的标志。
 
-```
+```cpp
 x = y;
 y = y+1;
 add(x, y);
@@ -14,7 +14,7 @@ add(x, y);
 
 同时，也可以将多个语句放到一行，效果等同于多行
 
-```
+```cpp
 x = y; y = y+1; add(x, y);
 ```
 
@@ -22,7 +22,7 @@ x = y; y = y+1; add(x, y);
 
 语句块是多句语句按照逻辑连起来的多个语句
 
-```
+```cpp
 {
    cout << "Hello World"; // 输出 Hello World
    return 0;
@@ -66,7 +66,7 @@ x = y; y = y+1; add(x, y);
 
 和python相似，在句子中合理添加空格可以增强可读性
 
-```
+```cpp
 a = 1;
 b = 2;
 ```
