--- a/3.Operation and Calculation/1-Computing Operator/3.1-Note.md
+++ b/3.Operation and Calculation/1-Computing Operator/3.1-Note.md
@@ -10,8 +10,129 @@
 
 ## 算数运算符
 
+这是一些常用的数学运算符，其遵循数学中加减乘除的优先规律，首先进行优先级高的运算，同优先级按运算的结合性运算，括号提高优先级。
 
-| 运算符名称  | 功能 | 例子             |
-| ----------- | ---- | ---------------- |
-| `+`（单目） | 正   | `+A`表示一个正数 |
-| `-`（单目） | 负   | `-A`表示一个负数 |
+### 单目运算符
+
+#### `+`（单目）（正号）
+
+用于放在整数前表示一个正数。
+
+#### `-`（单目）（负号）
+
+用于放在整数前表示一个负数。
+
+### 双目运算符
+
+#### `+`（双目）（加法）
+
+用于表示两数相加
+
+#### `-`（双目）（减法）
+
+用于表示两数相减
+
+#### `*`（乘法）
+
+用于表示两数相乘
+
+#### `/`（除法）
+
+用于表示两数相除
+
+#### `%`（取模）
+
+`A%B`表示`A/B`整除后的余数
+
+#### 类型转换
+
+当两个操作数类型不同时，会发生类型转换。转换原理见2.2的笔记，会将小整数类型的纯右值变为大整数类型。
+
+例如，对于一个整型（`int`）变量x和另一个双精度浮点型（`double`）类型变量y：
+
+* `x/3` 的结果将会是整型；
+* `x/3.0` 的结果将会是双精度浮点型；
+* `x/y` 的结果将会是双精度浮点型；
+* `x*1/3` 的结果将会是整型；
+* `x*1.0/3` 的结果将会是双精度浮点型；
+
+### 自增/自减运算符
+
+自增/自减运算符可放在变量前或变量后面，在变量前称为前缀，在变量后称为后缀，单独使用时前缀后缀无需特别区别，如果需要用到表达式的值则需注意。
+
+#### `++`（自增）
+
+`A++`表示`A`整数值增加`1`
+
+#### `-`（自减）
+
+`A--`表示`A`整数值减少`1`
+
+#### 表达式中自增/自减运算符的运算顺序
+
+```cpp
+i = 100;
+
+op1 = i++;  // op1 = 100，先 op1 = i，然后 i = i + 1
+
+i = 100;
+
+op2 = ++i;  // op2 = 101，先 i = i + 1，然后赋值 op2
+
+i = 100;
+
+op3 = i--;  // op3 = 100，先赋值 op3，然后 i = i - 1
+
+i = 100;
+
+op4 = --i;  // op4 = 99，先 i = i - 1，然后赋值 op4
+```
+
+## 关系运算符
+
+关系运算符用于比较两个值或表达式，并返回一个布尔值（`true` 或 `false`）。以下是C++中常用的关系运算符：
+
+
+| 运算符名称 | 功能                                       | 例子         |
+| ---------- | ------------------------------------------ | ------------ |
+| ==         | 检查两个值是否相等                         | (A==B)不为真 |
+| !=         | 检查两个值是否不相等                       | (A!=B)为真   |
+| >          | 检查左操作数的值是否大于右操作数的值       | (A>B)为真    |
+| <          | 检查左操作数的值是否小于右操作数的值       | (A<B)为真    |
+| >=         | 检查左操作数的值是否大于或等于右操作数的值 | (A>=B)为真   |
+| <=         | 检查左操作数的值是否小于或等于右操作数的值 | (A<=B)为真   |
+
+## 逻辑运算符
+
+在C++中，逻辑运算符用于对布尔值进行操作。这些运算符包括：
+
+### **逻辑与（&&）**
+
+如果两个操作数都为真，则结果为真；否则结果为假。
+
+```cpp
+bool a = true;
+bool b = false;
+bool result = (a && b); // result 为 false
+```
+
+### **逻辑或（||）**
+
+如果两个操作数中至少有一个为真，则结果为真；如果两个操作数都为假，则结果为假。
+
+```cpp
+bool a = true;
+bool b = false;
+bool result = (a || b); // result 为 true
+```
+
+### **逻辑非（!）**
+
+将操作数的真假取反。如果操作数为真，则结果为假；如果操作数为假，则结果为真。
+
+```cpp
+bool a = true;
+bool result = (!a); // result 为 false
+```
+
+## 赋值运算符
