更新运算符笔记，添加赋值运算符和其他运算符的详细说明及示例；新增.gitignore文件

--- a/3.Operation and Calculation/1-Computing Operator/3.1-Note.md
+++ b/3.Operation and Calculation/1-Computing Operator/3.1-Note.md
@@ -136,3 +136,132 @@ bool result = (!a); // result 为 false
 ```
 
 ## 赋值运算符
+
+
+| 运算符名称 | 功能                                             | 例子         |
+| ---------- | ------------------------------------------------ | ------------ |
+| =          | 将右边的值赋给左边                               | C=A+B        |
+| +=         | 把右边操作数加上左边操作数的结果赋值给左边操作数 | C+=A,即C=C+A |
+| -=         | 把右边操作数减去左边操作数的结果赋值给左边操作数 | C-=A,即C=C-A |
+| *=         | 把右边操作数乘以左边操作数的结果赋值给左边操作数 | C*=A,即C=C*A |
+| /=         | 把右边操作数除以左边操作数的结果赋值给左边操作数 | C/=A,即C=C/A |
+| %=         | 求两个操作数的模赋值给左边操作数                 | C%=A,即C=C%A |
+
+## 其他运算符
+
+### sizeof
+
+在2.1中提到过，
+
+> 在实际开发中，可以使用`sizeof`运算符来获取具体数据类型或变量所占用的字节数。
+
+**sizeof** 是一个关键字，它是一个编译时运算符，用于判断变量或数据类型的字节大小。
+
+sizeof 运算符可用于获取类、结构、共用体和其他用户自定义数据类型的大小。
+
+```cpp
+sizeof (data type)
+
+```
+
+通过对不同类型的数据使用，可以获得其不同的字节数。
+
+```cpp
+Size of char : 1
+Size of int : 4
+Size of short int : 2
+Size of long int : 4
+Size of float : 4
+Size of double : 8
+Size of wchar_t : 4
+
+```
+
+### 条件运算符
+
+```cpp
+Exp1 ? Exp2 : Exp3;
+
+```
+
+其中，Exp1、Exp2 和 Exp3 是表达式。请注意冒号的使用和位置。? : 表达式的值取决于 Exp1 的计算结果。如果 Exp1 为真，则计算 Exp2 的值，且 Exp2 的计算结果则为整个 ? : 表达式的值。如果 Exp1 为假，则计算 Exp3 的值，且 Exp3 的计算结果则为整个 ? : 表达式的值。
+
+? 被称为三元运算符，因为它需要三个操作数，可以用来代替如下所示的 if-else 语句：
+
+```cpp
+if(condition){
+   var = X;
+}else{
+   var = Y;
+}
+
+```
+
+可被替换为
+
+```cpp
+var = (condition) ? X : Y;
+
+```
+
+### 逗号运算符
+
+使用逗号运算符是为了把几个表达式放在一起，整个逗号表达式的值为系列中最后一个表达式的值。从本质上讲，逗号的作用是将一系列运算按顺序执行。
+
+最右边的那个表达式的值将作为整个逗号表达式的值，其他表达式的值会被丢弃，例如：
+
+```cpp
+var = (count=19, incr=10, count+1);
+
+```
+
+在这里，首先把 count 赋值为 19，把 incr 赋值为 10，然后把 count 加 1，最后，把最右边表达式 count+1 的计算结果 20 赋给 var。上面表达式中的括号是*必需*的，因为逗号运算符的优先级低于赋值操作符。
+
+### 强制转换运算符
+
+强制转换运算符是一种特殊的运算符，它把一种数据类型转换为另一种数据类型。强制转换运算符是一元运算符，它的优先级与其他一元运算符相同。
+
+```cpp
+(type) expression 
+
+```
+
+其中，type 是转换后的数据类型。
+
+例子：
+
+```cpp
+#include <iostream>
+using namespace std;
+ 
+int main()
+{
+   double a = 21.09399;
+   float b = 10.20;
+   int c ;
+ 
+   c = (int) a;
+   cout << "Line 1 - Value of (int)a is :" << c << endl ;
+   
+   c = (int) b;
+   cout << "Line 2 - Value of (int)b is  :" << c << endl ;
+   
+   return 0;
+}
+```
+
+输出是：
+
+```cpp
+Line 1 - Value of (int)a is :21
+Line 2 - Value of (int)b is  :10
+
+```
+
+### 指针运算符
+
+C++ 提供了两种指针运算符，一种是取地址运算符 &，一种是间接寻址运算符 \*。
+
+指针是一个包含了另一个变量地址的变量，您可以把一个包含了另一个变量地址的变量说成是"指向"另一个变量。变量可以是任意的数据类型，包括对象、结构或者指针。
+
+这个在后文会单独说明。
