新增二维数组示例程序及相关说明文档；修改的分支语句示例程序名称

--- a/5.Advanced Data Types/1-Arrays/5.1-Note.md
+++ b/5.Advanced Data Types/1-Arrays/5.1-Note.md
@@ -61,3 +61,77 @@ double salary = balance[9];
 ```
 
 上面的语句将把数组中第 10 个元素的值赋给 salary 变量。
+
+### 越界访问下标
+
+数组的下标$i$ 应当满足$0<=i<size$，如果下标越界，则会产生不可预料的后果，如段错误（Segmentation Fault），或者修改预期以外的变量。
+
+## 多维数组
+
+多维数组的实质是「数组的数组」，即外层数组的元素是数组。一个二维数组需要两个维度来定义：数组的长度和数组内元素的长度。
+
+多维数组声明的一般形式如下：
+
+```cpp
+type name[size1][size2]...[sizeN];
+```
+
+我们经常使用嵌套的 for 循环来处理二维数组。
+
+### 初始化二维数组
+
+多维数组可以通过在括号内为每行指定值来进行初始化。下面是一个带有 3 行 4 列的数组。
+
+```cpp
+int a[3][4] = {  
+ {0, 1, 2, 3} ,   /*  初始化索引号为 0 的行 */
+ {4, 5, 6, 7} ,   /*  初始化索引号为 1 的行 */
+ {8, 9, 10, 11}   /*  初始化索引号为 2 的行 */
+};
+
+```
+
+内部嵌套的括号是可选的，下面的初始化与上面是等同的：
+
+```cpp
+int a[3][4] = {0,1,2,3,4,5,6,7,8,9,10,11};
+```
+
+### 访问二维数组元素
+
+二维数组中的元素是通过使用下标（即数组的行索引和列索引）来访问的。例如：
+
+```cpp
+int val = a[2][3];
+```
+
+## 实例
+
+要求：定义一个九行九列的二维数组，并输出所有元素。同行每个元素之间空一格，每行元素输出结束另起一行。
+
+```cpp
+#include <iostream>
+using namespace std;
+
+int main(){
+    int num_list[9][9] = {
+        {1,2,3,4,5,6,7,8,9},
+        {1,2,3,4,5,6,7,8,9},
+        {1,2,3,4,5,6,7,8,9},
+        {1,2,3,4,5,6,7,8,9},
+        {1,2,3,4,5,6,7,8,9},
+        {1,2,3,4,5,6,7,8,9},
+        {1,2,3,4,5,6,7,8,9},
+        {1,2,3,4,5,6,7,8,9},
+        {1,2,3,4,5,6,7,8,9}
+        };
+  
+    for (int i=0; i<9; i++){
+        for (int u=0; u<8; u++){
+            cout << num_list[i][u] << ' ';
+        }
+        cout << num_list[i][8] << endl;
+    }
+
+}
+```
